# proyecto_sentimientos

./: app.py  local_dashboard.py  pyproject.toml  requirements.txt
stream_output/: part-00000-00826ab3-454a-4357-bf4b-16c3d84b77e6-c000.snappy.parquet  part-00000-014ae2d8-b501-4a70-8b31-09e5d8c80d7d-c000.snappy.parquet  part-00000-02445496-7160-4cd4-81d8-4fff248a7e44-c000.snappy.parquet  part-00000-0386ac7c-9212-446f-badd-55259a6dc2ff-c000.snappy.parquet  part-00000-05181d3f-c3cc-45d2-a0ca-8b89266221d4-c000.snappy.parquet  part-00000-06ac4304-f510-46b1-a394-02db2290b6f6-c000.snappy.parquet  part-00000-13a13635-81e4-41a2-b08b-45ff3dcc6abf-c000.snappy.parquet  part-00000-14bf4e70-9487-43b7-a7f4-95443684cf8d-c000.snappy.parquet  part-00000-19f06aa3-936d-488f-b9b7-e1d0742554a9-c000.snappy.parquet  part-00000-1c1ffc4f-1a4d-4123-985c-3d5bd9c50724-c000.snappy.parquet  part-00000-1ca9b2df-9e5b-4780-8be3-ea1dfa10d98d-c000.snappy.parquet  part-00000-1ec644bb-b327-4676-8065-4b6e53b8e513-c000.snappy.parquet  part-00000-216bdb26-3972-4252-b411-7fd7275fff6f-c000.snappy.parquet  part-00000-216eb0d1-1cff-492c-8bd3-243eb47f0978-c000.snappy.parquet  part-00000-21815a1c-9735-4c1f-89aa-ae641fdfd087-c000.snappy.parquet  part-00000-21bdf62f-4832-4343-9059-4cede71907d5-c000.snappy.parquet  part-00000-21dcdadb-0eac-4fb8-b49c-ef649641c9d2-c000.snappy.parquet  part-00000-22f99e50-31e5-495a-9f83-5ea6507528b1-c000.snappy.parquet  part-00000-2376b746-84d0-4dfd-8442-426123178b4c-c000.snappy.parquet  part-00000-24181d82-c228-470d-abe3-c3ff725b99b7-c000.snappy.parquet  (+566 more)
(+104 files in other folders)
