[project]
name = "sentiment-analysis-dashboard"
version = "1.0.0"
description = "Dashboard de Análisis de Sentimientos en Tiempo Real"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
dependencies = [
    "streamlit==1.28.0",
    "pandas==2.0.3",
    "plotly==5.15.0",
    "pyarrow==14.0.0",
    "wordcloud==1.9.3",
    "matplotlib==3.7.0",
    "numpy==1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
