[project]
name = "sentiment-analysis-dashboard"
version = "1.0.0"
description = "Dashboard de Análisis de Sentimientos en Tiempo Real"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
dependencies = [
    "streamlit==1.28.0",
    "pandas==2.1.4",
    "plotly==5.17.0",
    "pyarrow==14.0.0",
    "wordcloud==1.9.3",
    "matplotlib==3.8.0",
    "numpy==1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
